-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Testing Infrastructure
-
None
-
Fully Compatible
-
ALL
-
Execution Team 2019-10-07
-
50
-
None
-
None
-
None
-
None
-
None
-
None
-
None
[2019/09/27 14:52:31.512] /data/mci/f7b2a6acdc3d01ded6cc8f0f20c1760d/src/src/mongo/db/storage/biggie/biggie_record_store.cpp:194:5: error: object destroyed immediately after creation; did you mean to name the object? [bugprone-unused-raii,-warnings-as-errors] [2019/09/27 14:52:31.512] SizeAdjuster(opCtx, this); [2019/09/27 14:52:31.512] ^ ~ [2019/09/27 14:52:31.512] give_me_a_name