SERVER-43737 Fixed unnamed variable in Biggie's RecordStore